[package]
name = "mesabox"
version = "0.1.0"
authors = ["Alex Lyon <alexlyon@baidu.com>"]
description = "A collection of utilities important to basic system functionality"
build = "build.rs"

[features]
arch = ["platform-info"]
base32 = ["uucore"]
base64 = ["uucore"]
yes = []
gnu = [
    "arch",
    "base32",
    "base64",
    "yes"
]

getty = []
loginutils = [
    "getty"
]

# XXX: temporary until renaming dependencies is supported
tar_util = ["tar", "globset"]
lsb = [
    "tar_util"
]

ping = ["chrono", "crossbeam", "pnet", "byteorder", "trust-dns-resolver", "mio", "socket2"]
networking = [
    "ping"
]

cat = []
chmod = ["regex", "walkdir", "uucore"]
head = []
init = ["fnv"]
sh = ["either", "nom", "globset", "rustyline"]
sleep = ["uucore"]
posix = [
    "cat",
    "chmod",
    "head",
    "init",
    "sh",
    "sleep"
]

default = ["gnu", "loginutils", "lsb", "networking", "posix"]

[dependencies]
clap = "2.31.2"
failure = "0.1.1"
failure_derive = "0.1.1"
libc = "0.2.40"
nix = "0.10.0"

platform-info = { git = "https://github.com/uutils/platform-info", optional = true }
uucore = { git = "https://github.com/uutils/coreutils", features = ["encoding", "fs", "mode", "parse_time"], optional = true }
tar = { version = "0.4.15", optional = true }
globset = { version = "0.4.0", optional = true }
chrono = { version = "0.4.2", optional = true }
crossbeam = { version = "0.3.2", optional = true }
pnet = { version = "0.21.0", optional = true }
byteorder = { version = "1.2.3", optional = true }
trust-dns-resolver = { version = "0.9.0", optional = true }
mio = { version = "0.6.14", optional = true }
socket2 = { version = "0.3.5", optional = true }
walkdir = { version = "2.1.4", optional = true }
fnv = { version = "1.0.6", optional = true }
regex = { version = "1.0.0", optional = true }
either = { version = "1.5.0", optional = true }
nom = { version = "4.0.0", features = ["verbose-errors"], optional = true }
#rustyline = { version = "1.0.0", optional = true }
rustyline = { git = "https://github.com/kkawakam/rustyline", optional = true }

[dev-dependencies]
tempfile = "3.0.2"
libc = "0.2.40"
lazy_static = "1.0.1"

[profile.release]
lto = true
panic = "abort"

[[test]]
name = "tests"
